# tg_finance

./: docker-compose.yml  pyproject.toml  settings.py
src/: app.py  loader.py
src/data/: __init__.py
src/handlers/: __init__.py  categories.py  help.py  menu.py  purchase.py  register.py  start.py
src/handlers/services/: decorators.py  general_states.py  keyboards.py  sting_vars.py
src/migration/: env.py
src/migration/versions/: 3286737e2471_in.py  3d796fa1bd85_initial.py  6912a5e6a655_autodatetime.py  6a41e835476c_in.py  a867d9776fc5_autodatetime.py  d96cf01df428_add_fk.py
src/utils/: database.py  set_bot_commands.py
tg_backend/: alembic.ini  database.py  main.py  models.py
tg_backend/migration/: env.py
tg_backend/migration/versions/: 32bbc1be9621_initial.py  b229da81a7c1_models.py
tg_bot/: bot.py
