[tool.poetry]
name = "tg-finance"
version = "0.1.0"
description = ""
authors = ["karim <garkarim02@gmail.com>"]
readme = "README.md"
packages = [{include = "tg_finance"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"
psycopg2-binary = "^2.9.5"
uvicorn = "^0.19.0"
httpx = "^0.23.0"
aiogram = "^2.23.1"
sqlalchemy = "^1.4.43"
alembic = "^1.8.1"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
